feat: Implement birthday message delivery failure handling with a retry mechanism

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 MONGODB_URI=mongodb://localhost:27017/birthday_service
+BIRTHDAY_MESSAGE_PROVIDER=mock
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=no-reply@example.com
+WORKER_MAX_DELIVERY_ATTEMPTS=3
+WORKER_RETRY_DELAY_MINUTES=15
